# dmhm

./: CMakeLists.txt  HEADER  README
cmake/: config.h.cmake
cmake/toolchains/: BGP-xl_apr2011-essl_4.3.1-1.cmake  Stampede-intel-mvapich2-mkl.cmake  Stampede2-intel-impi-mkl.cmake
include/: dmhm.hpp
include/dmhm/: config.h.cmake  dist_hmat2d.hpp  dist_hmat3d.hpp  dist_quasi2d_hmat.hpp  graphics.hpp  hmat2d.hpp  hmat3d.hpp  hmat_tools.hpp  quasi2d_hmat.hpp
include/dmhm/building_blocks/: abstract_hmat.hpp  blas.hpp  dense.hpp  environment.hpp  lapack.hpp  low_rank.hpp  memory_map.hpp  mpi.hpp  random.hpp  sparse.hpp  timer.hpp  vector.hpp
include/dmhm/core/: abstract_hmat.hpp  blas.hpp  choice.hpp  dense.hpp  environment.hpp  lapack.hpp  low_rank.hpp  memory_map.hpp  mpi.hpp  mpi_choice.hpp  random.hpp  sparse.hpp  timer.hpp  vector.hpp
include/dmhm/graphics/: ColorMap.hpp  complex_display_window.hpp  display_widget.hpp  display_window-premoc.hpp  display_window.hpp
sbatch/: gen_files.py  read_files.py
src/DistHMat2d/: Add-incl.hpp  Adjoint-incl.hpp  Conjugate-incl.hpp  Copy-incl.hpp  DistHMat2d.cpp  Ghost-incl.hpp  Invert-incl.hpp  MultiplyDense-incl.hpp  MultiplyHMat-incl.hpp  MultiplyHMatCompress-incl.hpp  MultiplyHMatFHH-incl.hpp  MultiplyHMatFHHCompress-incl.hpp  MultiplyHMatFormGhostRanks-incl.hpp  MultiplyHMatMain-incl.hpp  MultiplyHMatParallelQR-incl.hpp  MultiplyHMatRandomCompress-incl.hpp  MultiplyVector-incl.hpp  Norm-incl.hpp  RedistHMat2d-incl.hpp  Scale-incl.hpp  SetToRandom-incl.hpp  Transpose-incl.hpp  Truncation-incl.hpp
src/DistHMat3d/: Add-incl.hpp  Adjoint-incl.hpp  Conjugate-incl.hpp  Copy-incl.hpp  DistHMat3d.cpp  Ghost-incl.hpp  Invert-incl.hpp  MultiplyDense-incl.hpp  MultiplyHMat-incl.hpp  MultiplyHMatCompress-incl.hpp  MultiplyHMatFHH-incl.hpp  MultiplyHMatFHHCompress-incl.hpp  MultiplyHMatFormGhostRanks-incl.hpp  MultiplyHMatMain-incl.hpp  MultiplyHMatParallelQR-incl.hpp  MultiplyHMatRandomCompress-incl.hpp  MultiplyVector-incl.hpp  Norm-incl.hpp  RedistHMat3d-incl.hpp  Scale-incl.hpp  SetToRandom-incl.hpp  Transpose-incl.hpp  Truncation-incl.hpp
src/DistQuasi2dHMat/: Add-incl.hpp  Adjoint-incl.hpp  Conjugate-incl.hpp  Copy-incl.hpp  DistQuasi2dHMat.cpp  Ghost-incl.hpp  Invert-incl.hpp  MultiplyDense-incl.hpp  MultiplyHMat-incl.hpp  MultiplyHMatCompress-incl.hpp  MultiplyHMatFHH-incl.hpp  MultiplyHMatFHHCompress-incl.hpp  MultiplyHMatFormGhostRanks-incl.hpp  MultiplyHMatMain-incl.hpp  MultiplyHMatParallelQR-incl.hpp  MultiplyVector-incl.hpp  Norm-incl.hpp  RedistQuasi2dHMat-incl.hpp  Scale-incl.hpp  SetToRandom-incl.hpp  Transpose-incl.hpp  Truncation-incl.hpp
src/HMat2d/: HMat2d.cpp  Invert-incl.hpp  MultiplyDense-incl.hpp  MultiplyHMat-incl.hpp  MultiplyVector-incl.hpp  Pack-incl.hpp  SetToRandom-incl.hpp
src/HMat3d/: HMat3d.cpp  Invert-incl.hpp  MultiplyDense-incl.hpp  MultiplyHMat-incl.hpp  MultiplyVector-incl.hpp  Pack-incl.hpp  SetToRandom-incl.hpp
src/Quasi2dHMat/: Invert-incl.hpp  MultiplyDense-incl.hpp  MultiplyHMat-incl.hpp  MultiplyVector-incl.hpp  Pack-incl.hpp  Quasi2dHMat.cpp  SetToRandom-incl.hpp
src/building_blocks/: environment.cpp  random.cpp
src/core/: global.cpp  mpi.cpp  random.cpp
src/graphics/: ComplexDisplayWindow.cpp  DisplayWindow.cpp
src/hmat_tools/: Add.cpp  AdjointMultiplyMatrix.cpp  AdjointMultiplyVector.cpp  Compress.cpp  ConvertSubmatrix.cpp  Invert.cpp  MultiplyMatrix.cpp  MultiplyVector.cpp  PackedQR.cpp  RoundedAdd.cpp  RoundedUpdate.cpp  TransposeMultiplyMatrix.cpp  TransposeMultiplyVector.cpp  Update.cpp
tests/DistHMat2d/: Ghost.cpp  ImportSparse.cpp  InvertHMat.cpp  MultiplyHMat.cpp  Pack.cpp  RandomMultiplyHMat.cpp  RandomMultiplyVectors.cpp  SparseToHMat.cpp
tests/DistHMat3d/: Ghost.cpp  ImportSparse.cpp  InvertHMat.cpp  MultiplyHMat.cpp  Pack.cpp  RandomMultiplyHMat.cpp  RandomMultiplyVectors.cpp  SparseToHMat.cpp
tests/DistQuasi2dHMat/: Ghost.cpp  ImportSparse.cpp  InvertHMat.cpp  MultiplyHMat.cpp  Pack.cpp  RandomMultiplyHMat.cpp  RandomMultiplyVectors.cpp
tests/HMat2d/: Invert.cpp  LowRankConstructor.cpp  MultiplyHMat.cpp  Pack.cpp
tests/HMat3d/: Invert.cpp  LowRankConstructor.cpp  MultiplyHMat.cpp  Pack.cpp
tests/Quasi2dHMat/: Invert.cpp  LowRankConstructor.cpp  MultiplyHMat.cpp  Pack.cpp
tests/building_blocks/: MemoryMap.cpp  ParallelLcg.cpp  Timer.cpp
tests/core/: MemoryMap.cpp  ParallelLcg.cpp  Timer.cpp
tests/hmat_tools/: Compress.cpp  ConvertSubmatrix.cpp  MatrixAdd.cpp  PackedQR.cpp
util/: Check.m  PetscAsciiToMatlab.pl  PlotHStructure.m
util/Memory_Estimate/: Memory_Estimate_2d.cpp
